# splitfuns

./: CHANGELOG.md  README.md  splitfuns.cabal
app/: Base.hs  Main.hs  Recursive.hs  TH.hs  Third.hs
src/: Splitfuns.hs
src/Language/Haskell/TH/: Lift.hs  Module.hs  Serialize.hs
